--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: "Future of Security: Integrative Solutions to Complex Security Systems"
 # tagline: A Jekyll template for course websites
 # description: A modern, highly customizable, responsive Jekyll template for course websites
 # author: Kevin Lin
-# baseurl: '/just-the-class' # the subpath of your site, e.g. /blog
+baseurl: '/course' # the subpath of your site, e.g. /blog
 url: 'http://future-of-security.github.io/' # the base hostname & protocol for your site, e.g. http://example.com
 exclude: ["Gemfile", "Gemfile.lock", "LICENSE"]
 
