--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,9 @@
 # you will see them accessed via {{ site.title }}, {{ site.github_repo }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: "Future of Security: Integrative Solutions to Complex Security Systems"
-# tagline: A Jekyll template for course websites
-# description: A modern, highly customizable, responsive Jekyll template for course websites
+title: Future of Security
+tagline: Integrative Solutions to Complex Security Systems
+description: A modern, highly customizable, responsive Jekyll template for course websites
 # author: Kevin Lin
 baseurl: '/course' # the subpath of your site, e.g. /blog
 url: 'http://future-of-security.github.io/' # the base hostname & protocol for your site, e.g. http://example.com
