--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,7 @@
     {
       "label": "Serve",
       "type": "shell",
-      "command": "bundle exec jekyll serve --livereload --force-polling",
+      "command": "bundle exec jekyll serve --livereload --force-polling --incremental",
       "group": {
         "kind": "test",
         "isDefault": true
