--- a/_config.yml
+++ b/_config.yml
@@ -70,6 +70,8 @@ liquid:
   strict_filters: true
 
 nav_external_links:
+  - title: Simulation
+    url: https://docs.google.com/document/d/11aDbN-jTrBEVwfZvzezJYkwTrKXRGygWhmz2FOYdHio/edit?usp=sharing
   - title: Syllabus
     url: https://docs.google.com/document/d/10YyjY5dPWE8AdyHUkcNERCitesb4teVjtpvK_yCduJU/edit?usp=sharing
   - title: Calendar
